# TablePro

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CLAUDE.md  PERFORMANCE.md  README.md  README.vi.md  ROADMAP.md  appcast.xml
.github/workflows/: build-plugin.yml  build.yml  cla.yml
OpenTable/: ContentView.swift  OpenTableApp.swift
OpenTable.xcodeproj/: project.pbxproj
OpenTable/Models/: ConnectionSession.swift  DataChange.swift  QueryBookmark.swift  QueryHistoryEntry.swift  QueryResult.swift
OpenTable/Views/: MainContentView.swift  WelcomeView.swift
Plugins/CSVExportPlugin/: CSVExportModels.swift
Plugins/DuckDBDriverPlugin/: DuckDBPlugin.swift
Plugins/JSONExportPlugin/: JSONExportModels.swift
Plugins/MQLExportPlugin/: MQLExportModels.swift
Plugins/MSSQLDriverPlugin/: MSSQLPlugin.swift
Plugins/SQLExportPlugin/: SQLExportModels.swift
Plugins/SQLImportPlugin/: SQLImportPlugin.swift
Plugins/XLSXExportPlugin/: XLSXExportModels.swift
TablePro/: AppDelegate+ConnectionHandler.swift  AppDelegate+FileOpen.swift  AppDelegate.swift  ContentView.swift  Info.plist  OpenTableApp.swift  TableProApp.swift
TablePro.xcodeproj/: project.pbxproj
TablePro/Models/: MultiRowEditState.swift  QueryResult.swift  (+1 more)
docs/: code-standards.md  codebase-summary.md  index.mdx  installation.mdx  project-overview-pdr.md  project-roadmap.md  system-architecture.md
scripts/: build-duckdb.sh  build-plugin.sh  build-release.sh
tablepro-windows/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
tablepro-windows/src-tauri/: Cargo.toml  tauri.conf.json
tablepro-windows/src-tauri/capabilities/: default.json
tablepro-windows/src-tauri/driver-mssql/: Cargo.toml
tablepro-windows/src-tauri/driver-mssql/src/: ddl.rs  driver.rs  ffi.rs  free.rs  handlers.rs  lib.rs  schema.rs  schema_indexes.rs
tablepro-windows/src-tauri/driver-mysql/: Cargo.toml
tablepro-windows/src-tauri/driver-mysql/src/: driver.rs  ffi.rs  lib.rs  query.rs  schema_indexes.rs  schema_tables.rs
tablepro-windows/src-tauri/driver-postgres/: Cargo.toml
tablepro-windows/src-tauri/driver-postgres/src/: driver.rs  ffi_helpers.rs  free_fns.rs  lib.rs  ops_basic.rs  ops_schema.rs
tablepro-windows/src-tauri/plugin-sdk/: Cargo.toml
tablepro-windows/src-tauri/plugin-sdk/src/: lib.rs  types.rs  vtable.rs
tablepro-windows/src-tauri/src/: lib.rs  main.rs
tablepro-windows/src-tauri/src/commands/: connection.rs  data.rs  export.rs  mod.rs  query.rs  schema.rs  settings.rs  storage.rs
tablepro-windows/src-tauri/src/database/: driver.rs  escaping.rs  factory.rs  mod.rs  mysql.rs  postgres.rs  sqlite.rs
tablepro-windows/src-tauri/src/models/: connection.rs  error.rs  mod.rs  query.rs  schema.rs
tablepro-windows/src-tauri/src/plugin/: adapter.rs  driver_trait.rs  manager.rs  mod.rs
tablepro-windows/src-tauri/src/services/: change_tracking.rs  connection_manager.rs  export.rs  filter.rs  import.rs  license.rs  mod.rs  sql_generator.rs  ssh_tunnel.rs
tablepro-windows/src-tauri/src/services/ai/: anthropic.rs  gemini.rs  mod.rs  openai.rs  schema_context.rs
tablepro-windows/src-tauri/src/storage/: connection_storage.rs  connection_store.rs  mod.rs  query_history.rs  settings.rs  settings_store.rs
(+306 files in other folders)
