[package]
name = "tablepro-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "tablepro_windows_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
async-trait = "0.1"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
postgres-native-tls = "0.5"
native-tls = "0.2"
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
mysql_async = "0.34"
keyring = "3"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
ssh2 = "0.9"
reqwest = { version = "0.12", features = ["json"] }
machine-uid = "0.5"
chrono = { version = "0.4", features = ["serde"] }
hostname = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
