[workspace]
members = [".", "plugin-sdk", "driver-postgres", "driver-mysql", "driver-mssql"]
resolver = "2"

[package]
name = "tablepro-windows"
version = "0.1.0"
edition = "2021"

[lib]
name = "tablepro_windows"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "tablepro-windows"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
tablepro-plugin-sdk = { path = "plugin-sdk" }
libloading = "0.8"
async-trait = "0.1"
tauri-plugin-dialog = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
